--- a/client/index.html
+++ b/client/index.html
@@ -46,7 +46,7 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
   
-  <script src="bower_components/jquery/dist/jquery.js"></script>
+  <!-- <script src="bower_components/jquery/dist/jquery.js"></script> -->
   <!-- bower:js -->
 
   <!-- endbower -->
